--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -5,10 +5,43 @@ body {
   margin: 0;
   font-size: 16px;
   line-height: 1.3;
+  -webkit-font-smoothing: antialiased;
 }
 
 a {
-  color: #008080;
+  color: #e1f5f5;
   text-decoration: none;
   font-weight: 500;
+}
+
+.Hero {
+  background: url('../images/teton-final.png');
+  height: 790px;
+  background-size: cover;
+  background-position: center;
+}
+
+.HeroGroup {
+  margin: auto;
+  max-width: 500px;
+  padding: 250px 50px;
+  text-align: center;
+}
+
+.Hero h1 {
+  margin: 0;
+  color: white;
+  font-size: 50px;
+  line-height: 1.2;
+}
+
+.Hero p {
+  color: rgba(255, 255, 255, 0.75);
+  font-size: 18px;
+}
+
+.Hero a {
+  font-size: 17px;
+  font-weight: 700;
+  text-transform: uppercase;
 }
